[tool.poetry]
name = "ultimate-chrome"
version = "2.0.0"
description = ""
authors = ["Parker Wahle <regulad@regulad.xyz>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pyppeteer = "^1.0.2"
replit = "^3.2.4"
waitress = "^3.0.2"
flask = "^3.1.2"
pillow = "^10.0.0"
nest-asyncio = "^1.5.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
